# llmserve

./: AGENTS.md  CNAME  Cargo.toml  LICENSE  Makefile  OPENCODE_INTEGRATION_PLAN.md  README.md  index.html  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
src/: AGENTS.md  app.rs  backends.rs  config.rs  events.rs  hardware.rs  lib.rs  main.rs  models.rs  opencode.rs  server.rs  theme.rs  ui.rs
tests/: AGENTS.md  serve_integration.rs
