[package]
name = "llmserve"
version = "0.0.5"
edition = "2024"
authors = ["Alex Jones"]
description = "TUI for serving local LLM models. Pick a model, pick a backend, serve it."
license = "MIT"
repository = "https://github.com/AlexsJones/llmserve"
homepage = "https://github.com/AlexsJones/llmserve"
readme = "README.md"
keywords = ["llm", "tui", "inference", "server", "models"]
categories = ["command-line-utilities"]

[[bin]]
name = "llmserve"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
walkdir = "2"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
libc = "0.2"
